Adicionados a imagem e o conteúdo header no HTML

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
    </head>
 
    <body>
-      <h1>Teste</h1>
+
+      <header>
+         <h1>Olá, eu sou o Marcos Winther Silva Carreiro</h1>
+
+         <img src="assets/img/MarcosWintherPhoto.jpg" alt="Foto de Marcos Winther Silva Carreiro">
+
+         <p>Junior Developer Front End</p>
+         <p>Itumbiara - GO</p>
+         <p>(64) 9 9265-3049</p>
+         <p>winthermarcos@gmail.com</p>
+      </header>
    </body>
 </html>
