--- a/index.html
+++ b/index.html
@@ -11,19 +11,32 @@
 
       <!-- CSS Normalize -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+      
+      <!-- CSS -->
+      <link rel="stylesheet" href="assets/css/global.css">
+      <link rel="stylesheet" href="assets/css/header.css">
    </head>
 
    <body>
 
-      <header>
-         <h1>Olá, eu sou o Marcos Winther Silva Carreiro</h1>
+      <div class="main">
 
-         <img src="assets/img/MarcosWintherPhoto.jpg" alt="Foto de Marcos Winther Silva Carreiro">
-
-         <p>Junior Developer Front End</p>
-         <p>Itumbiara - GO</p>
-         <p>(64) 9 9265-3049</p>
-         <p>winthermarcos@gmail.com</p>
-      </header>
+         <header class="header">
+            <img src="assets/img/MarcosWintherPhoto.jpg" alt="Foto de Marcos Winther Silva Carreiro" class="photo">
+   
+            <h1 class="title">
+               Olá, 
+               <br>eu sou o Marcos Winther Silva Carreiro
+            </h1>
+   
+            <div class="informations">
+               <p>Junior Developer Front End</p>
+               <p>Itumbiara - GO</p>
+               <p>(64) 9 9265-3049</p>
+               <p>winthermarcos@gmail.com</p>
+            </div>
+   
+         </header>
+      </div>
    </body>
 </html>
