Mais estilizações nos arquivos CSS e adições de ícones

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                <br>eu sou o Marcos Winther Silva Carreiro
             </h1>
    
-            <div class="informations">
-               <p>Junior Developer Front End</p>
-               <p>Itumbiara - GO</p>
-               <p>(64) 9 9265-3049</p>
-               <p>winthermarcos@gmail.com</p>
+            <div class="information">
+               <p class="job">Junior Developer Front End</p>
+               <p class="location">Itumbiara - GO</p>
+               <p class="phone">(64) 9 9265-3049</p>
+               <p class="email">winthermarcos@gmail.com</p>
             </div>
    
          </header>
