Adição do background

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <link rel="stylesheet" href="assets/css/header.css">
    </head>
 
-   <body>
+   <body class="background">
 
       <div class="main">
 
@@ -26,7 +26,7 @@
    
             <h1 class="title">
                Olá, 
-               <br>eu sou o Marcos Winther Silva Carreiro
+               <br>eu sou o Marcos Winther
             </h1>
    
             <div class="information">
