Adicionado a responsividade no projeto

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    
             <h1 class="title">
                Olá, 
-               <br>eu sou o Marcos Winther
+               <br>eu sou Marcos Winther
             </h1>
    
             <div class="information">
