Desenvolvendo a estrutura do acordeon - parte 1

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <!-- CSS -->
       <link rel="stylesheet" href="assets/css/global.css">
       <link rel="stylesheet" href="assets/css/header.css">
+      <link rel="stylesheet" href="assets/css/acordeon.css">
    </head>
 
    <body class="background">
@@ -35,8 +36,20 @@
                <p class="phone">(64) 9 9265-3049</p>
                <p class="email">winthermarcos@gmail.com</p>
             </div>
-   
          </header>
+
+         <section class="acordeon">
+            <button class="trigger">
+               Idiomas
+            </button>
+
+            <div class="content">
+               <ul>
+                  <li>Português</li>
+                  <li>Inglês</li>
+               </ul>
+            </div>
+         </section>
       </div>
    </body>
 </html>
