Desenvolvendo a estrutura do acordeon - parte 2

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </div>
          </header>
 
-         <section class="acordeon">
-            <button class="trigger">
+         <section class="acordeon open">
+            <button class="trigger" type="button">
                Idiomas
             </button>
 
@@ -51,5 +51,7 @@
             </div>
          </section>
       </div>
+
+      <script src="assets/js/acordeon.js"></script>
    </body>
 </html>
