--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <link rel="stylesheet" href="assets/css/global.css">
       <link rel="stylesheet" href="assets/css/header.css">
       <link rel="stylesheet" href="assets/css/acordeon.css">
+      <link rel="stylesheet" href="assets/css/languages.css">
    </head>
 
    <body class="background">
@@ -44,8 +45,8 @@
             </button>
 
             <div class="content">
-               <ul>
-                  <li>Português</li>
+               <ul class="languages">
+                  <li>Português (BR)</li>
                   <li>Inglês</li>
                </ul>
             </div>
