Estilizado a parte de portfólio

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <link rel="stylesheet" href="assets/css/header.css">
       <link rel="stylesheet" href="assets/css/acordeon.css">
       <link rel="stylesheet" href="assets/css/languages.css">
+      <link rel="stylesheet" href="assets/css/portfolio.css">
    </head>
 
    <body class="background">
@@ -48,6 +49,21 @@
                <ul class="languages">
                   <li>Português (BR)</li>
                   <li>Inglês</li>
+               </ul>
+            </div>
+         </section>
+
+         <section class="acordeon open">
+            <button class="trigger" type="button">
+               Portfólio
+            </button>
+
+            <div class="content">
+               <ul class="portfolio">
+                  <li>
+                     <span class="title github">Curriculum Vitae Online</span>
+                     <a href="https://github.com/MarcosWinther/curriculo-online-MarcosWinther" target="_blank">https://github.com/MarcosWinther/curriculo-online-MarcosWinther</a>
+                  </li>
                </ul>
             </div>
          </section>
