Adicionado mais projetos na seção Portfólio

--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
                      <span class="title github">Curriculum Vitae Online</span>
                      <a href="https://github.com/MarcosWinther/curriculo-online-MarcosWinther" target="_blank">https://github.com/MarcosWinther/curriculo-online-MarcosWinther</a>
                   </li>
+                  <li>
+                     <span class="title github">Project Blog - Filme Ratatouille</span>
+                     <a href="https://github.com/MarcosWinther/project-angular-ratatouille-movie" target="_blank">https://github.com/MarcosWinther/project-angular-ratatouille-movie</a>
+                  </li>
+                  <li>
+                     <span class="title github">Project Quiz - Scooby-Doo</span>
+                     <a href="https://github.com/MarcosWinther/angular-project-quiz-scooby-doo" target="_blank">https://github.com/MarcosWinther/angular-project-quiz-scooby-doo</a>
+                  </li>
                </ul>
             </div>
          </section>
