--- a/index.html
+++ b/index.html
@@ -33,10 +33,16 @@
             </h1>
    
             <div class="information">
-               <p class="job">Junior Developer Front End</p>
+               <p class="job">
+                  <a href="https://www.linkedin.com/in/marcos-winther-silva-carreiro-530316115/" target="_blank">Junior Developer Front End</a>
+               </p>
                <p class="location">Itumbiara - GO</p>
-               <p class="phone">(64) 9 9265-3049</p>
-               <p class="email">winthermarcos@gmail.com</p>
+               <p class="phone">
+                  <a href="tel:(64) 9 9265-3049">(64) 9 9265-3049</a>
+               </p>
+               <p class="email">
+                  <a href="mailto:winthermarcos@gmail.com">winthermarcos@gmail.com</a>
+               </p>
             </div>
          </header>
 
