--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <link rel="stylesheet" href="assets/css/acordeon.css">
       <link rel="stylesheet" href="assets/css/languages.css">
       <link rel="stylesheet" href="assets/css/portfolio.css">
+      <link rel="stylesheet" href="assets/css/experience.css">
    </head>
 
    <body class="background">
@@ -46,37 +47,114 @@
             </div>
          </header>
 
-         <section class="acordeon open">
+         <section class="acordeon">
             <button class="trigger" type="button">
-               Idiomas
+               <h2>Idiomas</h2>
             </button>
 
             <div class="content">
                <ul class="languages">
                   <li>Português (BR)</li>
-                  <li>Inglês</li>
+                  <li>Inglês - Iniciante</li>
                </ul>
             </div>
          </section>
 
-         <section class="acordeon open">
+         <section class="acordeon">
             <button class="trigger" type="button">
-               Portfólio
+               <h2>Portfólio</h2>
             </button>
 
             <div class="content">
                <ul class="portfolio">
                   <li>
-                     <span class="title github">Curriculum Vitae Online</span>
+                     <h3 class="title github">Curriculum Vitae Online</h3>
                      <a href="https://github.com/MarcosWinther/curriculo-online-MarcosWinther" target="_blank">https://github.com/MarcosWinther/curriculo-online-MarcosWinther</a>
                   </li>
                   <li>
-                     <span class="title github">Project Blog - Filme Ratatouille</span>
+                     <h3 class="title github">Project Blog - Filme Ratatouille</h3>
                      <a href="https://github.com/MarcosWinther/project-angular-ratatouille-movie" target="_blank">https://github.com/MarcosWinther/project-angular-ratatouille-movie</a>
                   </li>
                   <li>
-                     <span class="title github">Project Quiz - Scooby-Doo</span>
+                     <h3 class="title github">Project Quiz - Scooby-Doo</h3>
                      <a href="https://github.com/MarcosWinther/angular-project-quiz-scooby-doo" target="_blank">https://github.com/MarcosWinther/angular-project-quiz-scooby-doo</a>
+                  </li>
+               </ul>
+            </div>
+         </section>
+
+         <section class="acordeon">
+            <button class="trigger" type="button">
+               <h2>Experiência Profissional</h2>
+            </button>
+
+            <div class="content">
+               <ul class="experience">
+                  <li>
+                     <h3 class="title">
+                        Técnico de Infraestrutura TI / Randstad
+                     </h3>
+                     <p class="period">Nov 2021 - Fev 2023</p>
+                     <p class="detail-experience">
+                        Terceirado. <br>
+                        Contratado para prestar serviços para a empresa Lactalis do Brasil da cidade de Itumbiara - GO.<br>
+                        Responsável pela resolução de problemas de hardware e software, auxiliando os usuários que abriram o chamado 
+                        de atendimento no sistema Hélix.<br>
+                        Principais tarefas: realizar instalações de programas, configurações de vpns (Checkpoint VPN), formatação de 
+                        computadores Desktops e notebooks, instalação do Sistema Operacional (Windows 10) com as Normas Políticas 
+                        da empresa, instalações e soluções de problemas de Pacote Office e configurações de compartilhamento de pastas, 
+                        equipamentos e impressoras na rede. Para o acesso remoto são usadas as seguintes ferramentas: o TeamViewer, o 
+                        compartilhamento de tela pelo Teams ou acesso pelo ip da máquina do usuário usando a ferramenta do Windows de 
+                        Conexão Remota.
+                     </p>
+                  </li>
+
+                  <li>
+                     <h3 class="title">
+                        Técnico de Suporte em TI Interno / Core Telecom
+                     </h3>
+                     <p class="period">Jan 2021 - Abr 2021</p>
+                     <p class="detail-experience">
+                        Responsável pelo atendimento ao cliente realizando serviços relacionados a conexão 
+                        à internet. <br>
+                        Principais tarefas: atender e realizar ligações para clientes, ativação 
+                        e desbloqueio de conexão, resolver problemas relacionados a conexão via remoto, abrir 
+                        e fechar ordens de serviços pelo sistema MK Solutions, atender clientes pelo WhatsApp 
+                        no sistema MAXBOT, configurar roteadores, antenas e ONU e realizar limpeza no local 
+                        de trabalho.
+                     </p>
+                  </li>
+
+                  <li>
+                     <h3 class="title">
+                        Analista de Suporte Técnico / 3AM It Services
+                     </h3>
+                     <p class="period">Dez 2019 - Jan 2020</p>
+                     <p class="detail-experience">
+                        Projeto de migração de sistemas, sendo contratado para prestar serviços para Usina BP 
+                        Bunge de Itumbiara - GO. <br>
+                        Responsável pela migração dos sistemas dos computadores. <br>
+                        Principais tarefas: configuração de usuários nas máquinas (Desktops e notebooks), 
+                        instalação dos programas usados na empresa por esses usuários, instalação do SAP 
+                        Logon e CrossLink, formatação dos notebooks e Desktops e instalação da imagem do 
+                        Windows 10 com as Normas Políticas da empresa BP Bunge.
+                     </p>
+                  </li>
+
+                  <li>
+                     <h3 class="title">
+                        Suporte ao Usuário / Ministério Público do Estado de Goiás
+                     </h3>
+                     <p class="period">Out 2017 - Out 2019</p>
+                     <p class="detail-experience">
+                        Estágio CIEE. <br>
+                        Responsável pela resolução de problemas de hardware e software.<br>
+                        Principais tarefas: auxiliar os colaboradores nos problemas de hardware e 
+                        software, realizar configurações de compartilhamento de equipamentos e 
+                        impressoras na rede, fazer o controle de material de informática da 
+                        empresa usando a planilha de Excel e quando necessário realizar atendimentos 
+                        ao público e ligações externas para a Organização.
+                     </p>
                   </li>
                </ul>
             </div>
