Feito a seção de Skills no projeto

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <link rel="stylesheet" href="assets/css/languages.css">
       <link rel="stylesheet" href="assets/css/portfolio.css">
       <link rel="stylesheet" href="assets/css/experience.css">
+      <link rel="stylesheet" href="assets/css/skills.css">
    </head>
 
    <body class="background">
@@ -46,6 +47,58 @@
                </p>
             </div>
          </header>
+
+         <section class="acordeon">
+            <button class="trigger" type="button">
+               <h2>Skills</h2>
+            </button>
+
+            <div class="content">
+               <div class="skills">
+                  <section class="tools">
+                     <h3>Habilidades profissionais:</h3>
+                     <ul>
+                        <li>
+                           <img src="assets/img/icons/tools/html5.svg" alt="HTML5" title="HTML5">
+                        </li>
+                        <li>
+                           <img src="assets/img/icons/tools/css.svg" alt="CSS3" title="CSS3">
+                        </li>
+                        <li>
+                           <img src="assets/img/icons/tools/javascript.svg" alt="JavaScript" title="JavaScript">
+                        </li>
+                        <li>
+                           <img src="assets/img/icons/tools/nodejs.svg" alt="NodeJs" title="NodeJs">
+                        </li>
+                        <li>
+                           <img src="assets/img/icons/tools/angular.svg" alt="Angular" title="Angular">
+                        </li>
+                        <li>
+                           <img src="assets/img/icons/tools/github.svg" alt="GitHub" title="GitHub">
+                        </li>
+                        <li>
+                           <img src="assets/img/icons/tools/bootstrap.svg" alt="Bootstrap" title="Bootstrap">
+                        </li>
+                        <li>
+                           <img src="assets/img/icons/tools/react.svg" alt="React" title="React">
+                        </li>
+                     </ul>
+                  </section>
+   
+                  <section class="personal">
+                     <h3>Habilidades pessoais:</h3>
+                     <ul>
+                        <li>Facilidade de trabalhos práticos</li>
+                        <li>Facilidade em adquirir novos conhecimentos</li>
+                        <li>Flexibilidade</li>
+                        <li>Trabalho em Equipe</li>
+                        <li>Organização</li>
+                        <li>Comprometimento com Resultados</li>
+                     </ul>
+                  </section>
+               </div>
+            </div>
+         </section>
 
          <section class="acordeon">
             <button class="trigger" type="button">
