Criado o arquivo json dos meus dados e atualizado a página index.html

--- a/index.html
+++ b/index.html
@@ -27,23 +27,25 @@
       <div class="main">
 
          <header class="header">
-            <img src="assets/img/MarcosWintherPhoto.jpg" alt="Foto de Marcos Winther Silva Carreiro" class="photo">
+            <img src="assets/img/MarcosWintherPhoto.jpg" alt="Foto de perfil" class="photo profile.photo">
    
             <h1 class="title">
                Olá, 
-               <br>eu sou Marcos Winther
+               <br>eu sou <span class="profile.name">Carregando...</span>
             </h1>
    
             <div class="information">
                <p class="job">
-                  <a href="https://www.linkedin.com/in/marcos-winther-silva-carreiro-530316115/" target="_blank">Junior Developer Front End</a>
+                  <span class="profile.job">Carregando...</span>
                </p>
-               <p class="location">Itumbiara - GO</p>
+               <p class="location">
+                  <span class="profile.location">Carregando...</span>
+               </p>
                <p class="phone">
-                  <a href="tel:(64) 9 9265-3049">(64) 9 9265-3049</a>
+                  <a href="tel:(64) 99265-3049" class="profile.phone">Carregando...</a>
                </p>
                <p class="email">
-                  <a href="mailto:winthermarcos@gmail.com">winthermarcos@gmail.com</a>
+                  <a href="mailto:winthermarcos@gmail.com" class="profile.email">carregando@mail.com</a>
                </p>
             </div>
          </header>
@@ -215,5 +217,7 @@
       </div>
 
       <script src="assets/js/acordeon.js"></script>
+      <script src="assets/js/api.js"></script>
+      <script src="assets/js/main.js"></script>
    </body>
 </html>
