--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
       <div class="main">
 
          <header class="header">
-            <img src="assets/img/MarcosWintherPhoto.jpg" alt="Foto de perfil" class="photo profile.photo">
+            <img src="assets/img/MarcosWintherPhoto.jpg" alt="Foto de perfil" class="photo" id="profile.photo">
    
             <h1 class="title">
                Olá, 
-               <br>eu sou <span class="profile.name">Carregando...</span>
+               <br>eu sou <span id="profile.name">Carregando...</span>
             </h1>
    
             <div class="information">
-               <p class="job">
-                  <span class="profile.job">Carregando...</span>
+               <p class="job" id="profile.job">
+                  Carregando...
                </p>
-               <p class="location">
-                  <span class="profile.location">Carregando...</span>
+               <p class="location" id="profile.location">
+                  Carregando...
                </p>
                <p class="phone">
-                  <a href="tel:(64) 99265-3049" class="profile.phone">Carregando...</a>
+                  <a href="tel:(64) 99265-3049" id="profile.phone">Carregando...</a>
                </p>
                <p class="email">
-                  <a href="mailto:winthermarcos@gmail.com" class="profile.email">carregando@mail.com</a>
+                  <a href="mailto:winthermarcos@gmail.com" id="profile.email">carregando@mail.com</a>
                </p>
             </div>
          </header>
