Atualizações nas informações pessoais e softs skills no projeto

--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
       <div class="main">
 
          <header class="header">
-            <img src="assets/img/MarcosWintherPhoto.jpg" alt="Foto de perfil" class="photo" id="profile.photo">
+            <img src="assets/img/my-photo.png" alt="Foto de perfil" class="photo" id="profile.photo">
    
             <h1 class="title">
-               Olá, 
-               <br>eu sou <span id="profile.name">Carregando...</span>
+               Olá, eu sou <span id="profile.name">Carregando...</span>
             </h1>
    
             <div class="information">
@@ -63,39 +62,13 @@
                         <li>
                            <img src="assets/img/icons/tools/html5.svg" alt="HTML5" title="HTML5">
                         </li>
-                        <li>
-                           <img src="assets/img/icons/tools/css.svg" alt="CSS3" title="CSS3">
-                        </li>
-                        <li>
-                           <img src="assets/img/icons/tools/javascript.svg" alt="JavaScript" title="JavaScript">
-                        </li>
-                        <li>
-                           <img src="assets/img/icons/tools/nodejs.svg" alt="NodeJs" title="NodeJs">
-                        </li>
-                        <li>
-                           <img src="assets/img/icons/tools/angular.svg" alt="Angular" title="Angular">
-                        </li>
-                        <li>
-                           <img src="assets/img/icons/tools/github.svg" alt="GitHub" title="GitHub">
-                        </li>
-                        <li>
-                           <img src="assets/img/icons/tools/bootstrap.svg" alt="Bootstrap" title="Bootstrap">
-                        </li>
-                        <li>
-                           <img src="assets/img/icons/tools/react.svg" alt="React" title="React">
-                        </li>
                      </ul>
                   </section>
    
                   <section class="personal">
                      <h3>Habilidades pessoais:</h3>
-                     <ul>
-                        <li>Facilidade de trabalhos práticos</li>
-                        <li>Facilidade em adquirir novos conhecimentos</li>
-                        <li>Flexibilidade</li>
-                        <li>Trabalho em Equipe</li>
-                        <li>Organização</li>
-                        <li>Comprometimento com Resultados</li>
+                     <ul id="profile.skills.softSkills">
+                        <li>Carregando...</li>
                      </ul>
                   </section>
                </div>
