Dinamizando as hard skills

--- a/index.html
+++ b/index.html
@@ -58,10 +58,7 @@
                <div class="skills">
                   <section class="tools">
                      <h3>Habilidades profissionais:</h3>
-                     <ul>
-                        <li>
-                           <img src="assets/img/icons/tools/html5.svg" alt="HTML5" title="HTML5">
-                        </li>
+                     <ul id="profile.skills.hardSkills">
                      </ul>
                   </section>
    
