Dinamizando os idiomas

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                   <section class="tools">
                      <h3>Habilidades profissionais:</h3>
                      <ul id="profile.skills.hardSkills">
+                        <li>Carregando...</li>
                      </ul>
                   </section>
    
@@ -78,9 +79,8 @@
             </button>
 
             <div class="content">
-               <ul class="languages">
-                  <li>Português (BR)</li>
-                  <li>Inglês - Iniciante</li>
+               <ul class="languages" id="profile.languages">
+                  <li>Carregando...</li>
                </ul>
             </div>
          </section>
