Dinamizado a parte de portfólio

--- a/index.html
+++ b/index.html
@@ -91,19 +91,8 @@
             </button>
 
             <div class="content">
-               <ul class="portfolio">
-                  <li>
-                     <h3 class="title github">Curriculum Vitae Online</h3>
-                     <a href="https://github.com/MarcosWinther/curriculo-online-MarcosWinther" target="_blank">https://github.com/MarcosWinther/curriculo-online-MarcosWinther</a>
-                  </li>
-                  <li>
-                     <h3 class="title github">Project Blog - Filme Ratatouille</h3>
-                     <a href="https://github.com/MarcosWinther/project-angular-ratatouille-movie" target="_blank">https://github.com/MarcosWinther/project-angular-ratatouille-movie</a>
-                  </li>
-                  <li>
-                     <h3 class="title github">Project Quiz - Scooby-Doo</h3>
-                     <a href="https://github.com/MarcosWinther/angular-project-quiz-scooby-doo" target="_blank">https://github.com/MarcosWinther/angular-project-quiz-scooby-doo</a>
-                  </li>
+               <ul class="portfolio" id="profile.portfolio">
+                  <li>Carregando...</li>
                </ul>
             </div>
          </section>
